Fix line wrapping of inline code

--- a/scribble/minted.css
+++ b/scribble/minted.css
@@ -1,5 +1,5 @@
 .highlight-inline {
     display: inline-table;
     margin: 0em;
-    white-space: pre;
+    white-space: pre-wrap;
 }
